--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -538,6 +538,7 @@
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_HNYC.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWM.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWG.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_WYXNWP.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_WTHWYQ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_TSYXRJ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_YSPSCP.css" />
@@ -631,6 +632,7 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_WYXNWP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_WTHWYQ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_TSYXRJ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_YSPSCP.js" />
@@ -1061,6 +1063,7 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_WHYL_WYXNWP.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_WHYL_WTHWYQ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_WHYL_TSYXRJ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_WHYL_YSPSCP.js" />
@@ -1877,6 +1880,8 @@
     <Content Include="Areas\Business\Views\ESXX\ESXX_WHYL_WTHWYQ.cshtml" />
     <Content Include="Areas\Business\Views\ESCX\ESCX_WHYL_TSYXRJ.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_WHYL_TSYXRJ.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_WHYL_WYXNWP.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_WHYL_WYXNWP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
