--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -538,9 +538,14 @@
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_HNYC.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWM.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWG.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_PWKQ_DYP.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_PWKQ_YLYJDP.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_PWKQ_QTKQ.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_PWKQ_XFKGWQ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_WYXNWP.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_WTHWYQ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_TSYXRJ.css" />
+    <Content Include="Areas\Business\Css\XXXX\ES\ESXX_PWKQ_YCMP.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_WHYL_YSPSCP.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_MYFZMR_MRBJ.css" />
     <Content Include="Areas\Business\Css\XXXX\ES\ESXX_MYFZMR_FZXMXB.css" />
@@ -632,9 +637,14 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\CWCX\CWCX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_PWKQ_DYP.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_PWKQ_YLYJDP.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_PWKQ_XFKGWQ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_PWKQ_QTKQ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_WYXNWP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_WTHWYQ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_TSYXRJ.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_PWKQ_YCMP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_WHYL_YSPSCP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_MYFZMR_MRBJ.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\ESCX\ESCX_MYFZMR_FZXMXB.js" />
@@ -1063,6 +1073,11 @@
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_HNYC.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWM.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\CWXX\CWXX_CWG.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESCX_PWKQ_DYP.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESCX_PWKQ_YLYJDP.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESCX_PWKQ_QTKQ.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESCX_PWKQ_XFKGWQ.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESCX_PWKQ_YCMP.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_WHYL_WYXNWP.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_WHYL_WTHWYQ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\ESXX\ESXX_WHYL_TSYXRJ.js" />
@@ -1882,6 +1897,16 @@
     <Content Include="Areas\Business\Views\ESXX\ESXX_WHYL_TSYXRJ.cshtml" />
     <Content Include="Areas\Business\Views\ESCX\ESCX_WHYL_WYXNWP.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_WHYL_WYXNWP.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_PWKQ_YCMP.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_PWKQ_YCMP.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_PWKQ_XFKGWQ.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_PWKQ_DYP.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_PWKQ_YLYJDP.cshtml" />
+    <Content Include="Areas\Business\Views\ESCX\ESCX_PWKQ_QTKQ.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_PWKQ_XFKGWQ.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_PWKQ_DYP.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_PWKQ_QTKQ.cshtml" />
+    <Content Include="Areas\Business\Views\ESXX\ESXX_PWKQ_YLYJDP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
