--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -161,6 +161,7 @@
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZHMM.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_WZJY.css" />
     <Content Include="Areas\Business\Css\Common\Head.css" />
+    <Content Include="Areas\Business\Css\CXLB\QZZPCX.css" />
     <Content Include="Areas\Business\Css\CXLB\ESCX.css" />
     <Content Include="Areas\Business\Css\CXLB\CWCX.css" />
     <Content Include="Areas\Business\Css\CXLB\CLCX.css" />
@@ -592,6 +593,8 @@
     <Content Include="Areas\Business\Css\HTFB\ZXJC\ZXJC_JFJS.css" />
     <Content Include="Areas\Business\Css\HTFB\ZXJC\ZXJC_JJ.css" />
     <Content Include="Areas\Business\Css\HTFB\ZXJC\ZXJC_JZFW.css" />
+    <Content Include="Areas\Business\Css\XXXX\QZZP\QZZPXX_JZZP.css" />
+    <Content Include="Areas\Business\Css\XXXX\QZZP\QZZPXX_QZZP.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap-theme.min.css" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\css\bootstrap.css" />
@@ -669,6 +672,8 @@
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_XZL.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_SP.js" />
     <Content Include="Areas\Business\Scripts\Business\CXLB\FCCX\FCCX_ZZF.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\QZZPCX\QZZPCX_JZZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\CXLB\QZZPCX\QZZPCX_QZZP.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_GCC.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_GCCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\CL\CL_HC.js" />
@@ -1154,6 +1159,8 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\ZXJC\ZXJC_JZFW.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\ZXJC\ZXJC_JZFWYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\XXXX\Common\XXXX_Common.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\QZZPXX\QZZPXX_JZZP.js" />
+    <Content Include="Areas\Business\Scripts\Business\XXXX\QZZPXX\QZZPXX_QZZP.js" />
     <Content Include="Areas\Business\Scripts\jquery-1.9.1.min.js" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\AUTHORS.txt" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\external\jquery\jquery.js" />
@@ -1476,6 +1483,7 @@
       <DependentUpon>png.aspx</DependentUpon>
     </Compile>
     <Compile Include="Areas\Business\BusinessAreaRegistration.cs" />
+    <Compile Include="Areas\Business\Controllers\CXLB\QZZPCXController.cs" />
     <Compile Include="Areas\Business\Controllers\CXLB\ESCXController.cs" />
     <Compile Include="Areas\Business\Controllers\CXLB\CWCXController.cs" />
     <Compile Include="Areas\Business\Controllers\CXLB\CLCXController.cs" />
@@ -1513,6 +1521,7 @@
     <Compile Include="Areas\Business\Controllers\HTGL\WDXJController.cs" />
     <Compile Include="Areas\Business\Controllers\HTGL\WZCXController.cs" />
     <Compile Include="Areas\Business\Controllers\HTGL\XXGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\XXXX\QZZPXXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXXX\ESXXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXXX\CWXXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXXX\CLXXController.cs" />
@@ -1911,6 +1920,10 @@
     <Content Include="Areas\Business\Views\ESCX\ESCX_QTES_CRYP.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_QTES_ESSB.cshtml" />
     <Content Include="Areas\Business\Views\ESXX\ESXX_QTES_CRYP.cshtml" />
+    <Content Include="Areas\Business\Views\QZZPCX\QZZPCX_QZZP.cshtml" />
+    <Content Include="Areas\Business\Views\QZZPCX\QZZPCX_JZZP.cshtml" />
+    <Content Include="Areas\Business\Views\QZZPXX\QZZPXX_QZZP.cshtml" />
+    <Content Include="Areas\Business\Views\QZZPXX\QZZPXX_JZZP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
