--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="CXLB\IPFCGCXBLL.cs" />
     <Compile Include="CXLB\IJYPXCXBLL.cs" />
+    <Compile Include="CXLB\INLMFYCXBLL.cs" />
     <Compile Include="CXLB\IZSJMCXBLL.cs" />
     <Compile Include="CXLB\IQZZPCXBLL.cs" />
     <Compile Include="CXLB\IESCXBLL.cs" />
